Mark for needing visual overflow recalc when marking for needing descendant layout.

CL 1391863 inadvertently removed this.

Bug: 918713

Change-Id: I3622168c1dab40403361f8d671a3bb84af88de01
Reviewed-on: https://chromium-review.googlesource.com/c/1395557
Reviewed-by: Aleks Totic <atotic@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619865}
Former-commit-id: 87923cb6db61c9e271fa0f5f5c1d3f7e3fbe4006